2012-08-10  Ales Cepek  <cepek@gnu.org>

	* Fixed a bug reported by Jacques Beilin <jacques.beilin@ensg.eu>

	Function NormalDistribution ended in an endless loop for high
	values of input argument x.

diff --git a/lib/gnu_gama/statan.cpp b/lib/gnu_gama/statan.cpp
index 4da4a3b..bc2255c 100644
--- a/lib/gnu_gama/statan.cpp
+++ b/lib/gnu_gama/statan.cpp
@@ -21,7 +21,7 @@

 #include <gnu_gama/statan.h>
 #include <gnu_gama/radian.h>
-
+#include <cfloat>

 using namespace std;

@@ -211,7 +211,10 @@ void NormalDistribution(double x, double& D, double& f)
       D = p2/q2;
       if (!typv)
          D = 1 - D;
-      } while ( (r-D) != 0 || (s-D) != 0);
+   } while (std::abs(r - D) > DBL_EPSILON);
+
+   if (s - D) return;
+   if (typv) D = 0; else D = 1;
 }

 // Kolmogorov-Smirnov probability function


2012-07-26  Ales Cepek  <cepek@gnu.org>

	* Fixed a bug reported by Anton Horpynich <anton@vingeo.com>

	The computation of approximate coordinates failed if an angle
	needed for computing of an intersection was smaller than 0.15
	radians / 10 gons (implicit testing criterion). Although this is a
	reasonable limit for standard surveying networks, in a batch
	computation of approximate coordinates a much smaller value can be
	sometimes acceptable. It is more or less a matter of personal
	opinion if this is to be supposed a bug or not.

	Gama newly solves approximate coordinates in two main loops.
	During the first loop the default value 0.15 in class Acord is
	used.  If afterwards there are still some coordinates remain
	missing Gama starts a second loop with series of iterations in
	which firstly tries to find a solution with the default value
	then secondly with a very tiny limit of 0.0015 radians.

	In most cases all coordinates are solved in the first loop with
	the default small angle limit 10 gons.

	............................................


2012-07-24  Ales Cepek  <cepek@gnu.org>

	* new release 1.12

2012-05-08  Vaclav Petras  <wenzeslaus@gmail.com>
